# project_pune

./: .dockerignore  .gitignore  AI_MODEL_REQUIREMENTS.md  CODING_STANDARDS.md  COPILOT_INSTRUCTIONS.md  HACKATHON_COMPLIANCE_CHECKLIST.md  MASTER_VALIDATION_PROMPT.md  PROJECT_RULES.md  SECURITY_GUIDELINES.md  SYSTEM_ARCHITECTURE.md
backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 0001_enterprise_database_foundation.py  0002_auth_identity_management.py  0003_enterprise_rbac_authorization.py  0004_enterprise_identity_domain.py  README.md
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  communication.py  context.py  dependencies.py  governance.py  memory.py  models.py  monitoring.py  schemas.py  security.py  validators.py
backend/app/ai/: __init__.py  (+3 more)
backend/docs/: authorization.md  prompt-framework.md
backend/requirements/: README.md
backend/scripts/: README.md
backend/tests/: conftest.py  test_agents_platform.py  test_ai_gateway.py  test_auth_api.py  test_auth_service.py  test_auth_utils.py  test_authorization_api.py  test_authorization_service.py  test_banking_platform.py  test_config.py  test_database.py  test_database_models.py  test_executive_platform.py  test_grc_platform.py  test_health.py  test_health_service.py  test_identity_domain.py  test_knowledge_platform.py  test_migration_service.py  test_prompt_framework.py  test_reasoning_platform.py  test_redis.py  test_repository_layer.py  test_seed_service.py  test_threat_platform.py
(+496 files in other folders)
