[tool.poetry]
name = "sentinel-fusion-ai-backend"
version = "0.1.0"
description = "Phase 1 backend foundation for Sentinel Fusion AI"
authors = ["Sentinel Fusion AI Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
bcrypt = "^4.2.0"
PyJWT = "^2.9.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
email-validator = "^2.2.0"
sqlalchemy = { version = "^2.0.32", extras = ["asyncio"] }
alembic = "^1.13.2"
asyncpg = "^0.29.0"
redis = { version = "^5.0.8", extras = ["hiredis"] }
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
httpx = "^0.27.0"
qdrant-client = "^1.10.1"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
python-docx = "^1.1.2"
PyMuPDF = "^1.24.9"
sentence-transformers = "^3.0.1"
langchain-core = "^0.2.38"
langchain-community = "^0.2.16"
unstructured = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
